[tool.poetry]
name = "awsglue-local"
version = "0.2.0"
description = ""
authors = ["Ryan Eloff <ryan.peter.eloff@gmail.com>"]
packages = [
    { include = "awsglue" },
]

[tool.poetry.dependencies]
python = "*"

[tool.poetry.dev-dependencies]
pyspark = "^2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
