[tool.poetry]
name = "awsglue-local"
version = "0.2.1"
description = "Build Python interfaces to the AWS Glue ETL library for use as a local dependency."
authors = ["Ryan Eloff <ryan.peter.eloff@gmail.com>"]
packages = [
    { include = "awsglue" },
]
license = "Amazon Software License 1.0"
readme = "README.md"
repository = "https://github.com/rpeloff/aws-glue-libs"

[tool.poetry.dependencies]
python = "*"

[tool.poetry.dev-dependencies]
pyspark = "^2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
